--- a/config/templates/includes/navbar.html
+++ b/config/templates/includes/navbar.html
@@ -1,68 +1,45 @@
-<header class="flex flex-col antialiased">
-    <nav class="bg-gray-50 px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1">
+<header class="flex flex-col antialiased fixed top-0 z-50 w-full">
+    <nav class="bg-gray-50 px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1 border-b border-gray-200">
         <div class="flex justify-between items-center">
             <div class="flex justify-start items-center">
                 <a href="{% url 'home' %}" class="flex mr-6">
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">ODK Publish</span>
+                    <div title="Publish MDM"
+                         class="mr-3 shadow-md flex items-center p-2 rounded-full ring-2 ring-primary-300 stroke-primary-700 fill-primary-400 stroke-[1.5] border-primary-400 bg-gradient-to-r from-primary-100 via-primary-200 to-primary-200">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             class="w-6 h-6"
+                             viewBox="0 0 24 24"
+                             stroke-linecap="round"
+                             stroke-linejoin="round">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                        </svg>
+                    </div>
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-primary">
+                        Publish MDM
+                        <small class="ms-2 font-semibold text-gray-500 dark:text-gray-400">
+                            {% if request.organization %}{{ request.organization.name }}{% endif %}
+                        </small>
+                    </span>
                 </a>
-                {% if request.user.is_authenticated %}
-                    <button id="dropdownUserNameButton"
-                            data-dropdown-toggle="dropdownUserName"
-                            class="flex justify-between items-center p-2 rounded-lg lg:min-w-80 cursor-pointer ring-2 ring-primary-200 dark:bg-gray-900 dark:hover:bg-gray-800 hover:bg-gray-50 dark:hover-bg-gray-700 focus:outline-none focus:ring-4 focus:ring-primary-200 dark:focus:ring-gray-700"
-                            type="button">
-                        <span class="sr-only">Open ODK project menu</span>
-                        <div class="flex items-center">
-                            <div class="text-left">
-                                <div class="font-semibold leading-none text-gray-900 dark:text-white mb-0.5">
-                                    {{ request.odk_project.name | default:"Select ODK Publish project..." }}
-                                </div>
-                                <div class="text-xs text-gray-500 dark:text-gray-400">
-                                    {% if request.odk_project %}
-                                        {{ request.odk_project.central_server }}
-                                    {% else %}
-                                        -
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
-                        <svg class="w-3 h-3 text-gray-500 dark:text-gray-400 ml-2"
+                {% if request.organization %}
+                    <button data-drawer-target="sidebar-team-switch"
+                            data-drawer-toggle="sidebar-team-switch"
+                            aria-controls="sidebar-team-switch"
+                            type="button"
+                            class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+                        <span class="sr-only">Open sidebar</span>
+                        <svg class="w-6 h-6"
                              aria-hidden="true"
-                             xmlns="http://www.w3.org/2000/svg"
-                             fill="none"
-                             viewBox="0 0 10 16">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5m0 6 4 4 4-4" />
+                             fill="currentColor"
+                             viewBox="0 0 20 20"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z">
+                            </path>
                         </svg>
                     </button>
-                    <!-- Dropdown menu -->
-                    <div id="dropdownUserName"
-                         class="hidden z-10 w-60 bg-white lg:min-w-80 rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600"
-                         data-popper-placement="bottom">
-                        {% for project in request.odk_projects %}
-                            {% if project != request.odk_project %}
-                                <a href="{% url 'odk_publish:form-template-list' project.pk %}"
-                                   class="flex items-center py-3 px-4 rounded hover:bg-gray-50 dark:hover:bg-gray-600">
-                                    <div class="text-left">
-                                        <div class="font-semibold leading-none text-gray-900 dark:text-white mb-0.5">{{ project.name }}</div>
-                                        <div class="text-xs text-gray-500 dark:text-gray-400">{{ project.central_server }}</div>
-                                    </div>
-                                </a>
-                            {% endif %}
-                        {% endfor %}
-                    </div>
                 {% endif %}
             </div>
             <div class="flex justify-between items-center lg:order-2">
                 <ul class="hidden flex-col mt-0 mr-0 w-full text-sm font-medium text-gray-900 md:flex md:flex-row dark:text-white">
-                    <li>
-                        <a href="{% url 'odk_publish:server-sync' %}"
-                           class="btn btn-outline mr-4">Sync Project</a>
-                    </li>
-                    {% if request.odk_project %}
-                        <li>
-                            <a href="{% url 'odk_publish:edit-project' request.odk_project.pk %}"
-                               class="btn btn-outline mr-4">Edit Project</a>
-                        </li>
-                    {% endif %}
                     {% if request.user.is_superuser %}
                         <li>
                             <a href="{% url 'admin:index' %}"
@@ -123,9 +100,40 @@
                                     <a href="{% url 'socialaccount_connections' %}"
                                        class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">Account settings</a>
                                 </li>
-                            </ul>
-                            <ul class="py-1 text-gray-500 dark:text-gray-400"
-                                aria-labelledby="dropdown">
+                                <li>
+                                    <button id="orgDropdownButton"
+                                            data-dropdown-toggle="orgDropdown"
+                                            data-dropdown-placement="right-start"
+                                            type="button"
+                                            class="flex text-sm items-center justify-between w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+                                        Switch organization
+                                        <svg class="w-2.5 h-2.5 ms-3 rtl:rotate-180"
+                                             aria-hidden="true"
+                                             xmlns="http://www.w3.org/2000/svg"
+                                             fill="none"
+                                             viewBox="0 0 6 10">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                                        </svg>
+                                    </button>
+                                    <div id="orgDropdown"
+                                         class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 dark:divide-gray-600">
+                                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
+                                            aria-labelledby="orgDropdownButton">
+                                            {% for organization in request.organizations %}
+                                                {% if organization != request.organization %}
+                                                    <li>
+                                                        <a href="{{ organization.get_absolute_url }}"
+                                                           class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">{{ organization }}</a>
+                                                    </li>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </ul>
+                                        <div class="py-2">
+                                            <a href="{% url 'odk_publish:create-organization' %}"
+                                               class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">Create a new organization...</a>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li>
                                     <a href="{% url 'account_logout' %}"
                                        class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sign out</a>
@@ -152,7 +160,7 @@
             </div>
         </div>
     </nav>
-    {% if request.odk_project %}
+    {% if request.odk_project and False %}
         <nav id="toggleMobileMenu"
              class="hidden order-3 bg-gray-50 dark:border-b shadow-sm dark:bg-gray-900 md:block dark:border-gray-800 md:order-2">
             <div class="px-0 lg:px-6">
