--- a/config/templates/odk_publish/change_project.html
+++ b/config/templates/odk_publish/change_project.html
@@ -90,7 +90,7 @@
             <button type="submit" class="btn btn-outline btn-primary">Save project</button>
             <a type="button"
                class="btn btn-outline"
-               href="{% url 'odk_publish:form-template-list' request.odk_project.pk %}">Cancel</a>
+               href="{% url 'odk_publish:form-template-list' request.organization.slug request.odk_project.pk %}">Cancel</a>
         </div>
     </form>
     <script>
