--- a/config/templates/includes/navbar.html
+++ b/config/templates/includes/navbar.html
@@ -1,5 +1,5 @@
 <header class="flex flex-col antialiased fixed top-0 z-50 w-full">
-    <nav class="bg-gray-50 px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1 border-b border-gray-200">
+    <nav class="bg-blue-50 px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1 border-b border-gray-200">
         <div class="flex justify-between items-center">
             <div class="flex justify-start items-center">
                 <a href="{% url 'home' %}" class="flex mr-6">
@@ -15,133 +15,8 @@
                     </div>
                     <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-primary">
                         Publish MDM
-                        <small class="ms-2 font-semibold text-gray-500 dark:text-gray-400">
-                            {% if request.organization %}{{ request.organization.name }}{% endif %}
-                        </small>
                     </span>
                 </a>
-                {% if request.organization %}
-                    <button data-drawer-target="sidebar-team-switch"
-                            data-drawer-toggle="sidebar-team-switch"
-                            aria-controls="sidebar-team-switch"
-                            type="button"
-                            class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
-                        <span class="sr-only">Open sidebar</span>
-                        <svg class="w-6 h-6"
-                             aria-hidden="true"
-                             fill="currentColor"
-                             viewBox="0 0 20 20"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z">
-                            </path>
-                        </svg>
-                    </button>
-                {% endif %}
-            </div>
-            <div class="flex justify-between items-center lg:order-2">
-                <ul class="hidden flex-col mt-0 mr-0 w-full text-sm font-medium text-gray-900 md:flex md:flex-row dark:text-white">
-                    {% if request.user.is_superuser %}
-                        <li>
-                            <a href="{% url 'admin:index' %}"
-                               class="py-3 px-2 hover:text-primary-600 dark:hover:text-primary-500"
-                               aria-current="page">Admin</a>
-                        </li>
-                    {% endif %}
-                    {% if not request.user.is_authenticated %}
-                        <li>
-                            <a href="{% url 'account_login' %}"
-                               class="py-3 px-2 hover:text-primary-600 dark:hover:text-primary-500"
-                               aria-current="page">Log in</a>
-                        </li>
-                    {% endif %}
-                </ul>
-                <span class="hidden mx-2 w-px h-5 bg-gray-200 dark:bg-gray-600 md:inline"></span>
-                <button id="theme-toggle"
-                        type="button"
-                        class="cursor-pointer text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
-                    <svg id="theme-toggle-dark-icon"
-                         class="hidden w-5 h-5"
-                         fill="currentColor"
-                         viewBox="0 0 20 20"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
-                    </svg>
-                    <svg id="theme-toggle-light-icon"
-                         class="hidden w-5 h-5"
-                         fill="currentColor"
-                         viewBox="0 0 20 20"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd">
-                        </path>
-                    </svg>
-                </button>
-                <span class="hidden mx-2 w-px h-5 bg-gray-200 dark:bg-gray-600 md:inline"></span>
-                {% if request.user.is_authenticated %}
-                    <div class="flex items-center lg:order-2">
-                        <button type="button"
-                                class="flex mx-3 text-sm rounded-full md:mr-0 focus:ring-4 focus:ring-red-200 dark:focus:ring-gray-600 cursor-pointer"
-                                id="user-menu-button"
-                                aria-expanded="false"
-                                data-dropdown-toggle="dropdown">
-                            <span class="sr-only">Open user menu</span>
-                            <div class="relative inline-flex items-center justify-center w-10 h-10 overflow-hidden ring-2 ring-red-300 rounded-full dark:bg-gray-600">
-                                <span class="font-medium text-red dark:text-gray-300">{{ request.user.first_name|first }}{{ request.user.last_name|first }}</span>
-                            </div>
-                        </button>
-                        <!-- Dropdown menu -->
-                        <div class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600"
-                             id="dropdown">
-                            <div class="py-3 px-4">
-                                <span class="block text-sm font-semibold text-gray-900 dark:text-white">{{ request.user.first_name }} {{ request.user.last_name }}</span>
-                            </div>
-                            <ul class="py-1 text-gray-500 dark:text-gray-400"
-                                aria-labelledby="dropdown">
-                                <li>
-                                    <a href="{% url 'socialaccount_connections' %}"
-                                       class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">Account settings</a>
-                                </li>
-                                <li>
-                                    <button id="orgDropdownButton"
-                                            data-dropdown-toggle="orgDropdown"
-                                            data-dropdown-placement="right-start"
-                                            type="button"
-                                            class="flex text-sm items-center justify-between w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                                        Switch organization
-                                        <svg class="w-2.5 h-2.5 ms-3 rtl:rotate-180"
-                                             aria-hidden="true"
-                                             xmlns="http://www.w3.org/2000/svg"
-                                             fill="none"
-                                             viewBox="0 0 6 10">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
-                                        </svg>
-                                    </button>
-                                    <div id="orgDropdown"
-                                         class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 dark:divide-gray-600">
-                                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                                            aria-labelledby="orgDropdownButton">
-                                            {% for organization in request.organizations %}
-                                                {% if organization != request.organization %}
-                                                    <li>
-                                                        <a href="{{ organization.get_absolute_url }}"
-                                                           class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">{{ organization }}</a>
-                                                    </li>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </ul>
-                                        <div class="py-2">
-                                            <a href="{% url 'publish_mdm:create-organization' %}"
-                                               class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">Create a new organization...</a>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a href="{% url 'account_logout' %}"
-                                       class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sign out</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                {% endif %}
             </div>
         </div>
     </nav>
