--- a/apps/marketing/templates/marketing/includes/navbar.html
+++ b/apps/marketing/templates/marketing/includes/navbar.html
@@ -2,10 +2,8 @@
     <nav class="px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1">
         <div class="flex justify-between items-center">
             <div class="flex justify-start items-center">
-                <a href="/" class="flex mr-6">
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-blue-600">
-                        Publish MDM
-                    </span>
+                <a href="{% url 'marketing:landing' %}"class="flex mr-6">
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-blue-600">Publish MDM</span>
                 </a>
             </div>
             <div class="flex justify-between items-center lg:order-2">
@@ -31,4 +29,4 @@
             </div>
         </div>
     </nav>
-</header> 
+</header>
