--- a/config/templates/includes/navbar.html
+++ b/config/templates/includes/navbar.html
@@ -1,6 +1,6 @@
 <header class="flex flex-col antialiased fixed top-0 z-50 w-full">
     <nav class="bg-blue-50 px-4 lg:px-6 py-2.5 dark:bg-gray-900 order-1 border-b border-gray-200">
-        <div class="flex justify-between items-center">
+        <div class="flex ju]stify-between items-center">
             <div class="flex justify-start items-center">
                 <a href="{% url 'home' %}" class="flex mr-6">
                     <div title="Publish MDM"
@@ -13,9 +13,7 @@
                             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
                         </svg>
                     </div>
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-primary">
-                        Publish MDM
-                    </span>
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-primary">Publish MDM</span>
                 </a>
             </div>
         </div>
