chore: Update publish.gif to a better looking mockup on laptop.

--- a/apps/marketing/templates/marketing/landing.html
+++ b/apps/marketing/templates/marketing/landing.html
@@ -18,11 +18,11 @@
                        class="inline-block btn text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-lg px-8 py-4 transition mb-4">Try a Free Demo!</a>
                 </div>
                 <div class=" flex items-center justify-center mb-8 lg:mb-0 ">
-                    <img src="{% static 'publish.gif' %}"
-                         height="500"
+                    <img src="{% static 'publish-mockup.gif' %}"
+                         height="550"
                          width="auto"
                          alt="Dashboard illustration "
-                         class="h-[500px] w-auto object-fit rounded shadow-lg" />
+                         class="h-[550px] w-auto object-fit" />
                 </div>
             </div>
             <div class="pt-48 lg:pb-16 pb-8 -mt-48 bg-gradient-to-b from-gray-50 to-blue-50 dark:from-gray-900 dark:to-gray-800 z-2">
